@@ -26,10 +26,9 @@
 
 package org.openjdk.jextract.clang;
 
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
+import java.lang.foreign.NativeArena;
 import java.lang.foreign.SegmentAllocator;
-import java.lang.foreign.MemorySession;
 import org.openjdk.jextract.clang.libclang.Index_h;
 
 import java.nio.file.Path;
@@ -39,7 +38,7 @@ import static org.openjdk.jextract.clang.libclang.Index_h.C_POINTER;
 
 public class Index extends ClangDisposable {
 
-    Index(MemoryAddress addr) {
+    Index(MemorySegment addr) {
         super(addr, () -> Index_h.clang_disposeIndex(addr));
     }
 
@@ -71,8 +70,8 @@ public class Index extends ClangDisposable {
 
     public TranslationUnit parseTU(String file, Consumer<Diagnostic> dh, int options, String... args)
             throws ParsingFailedException {
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(session);
+        try (NativeArena session = NativeArena.openConfined()) {
+            SegmentAllocator allocator = SegmentAllocator.bumpAllocator(session);
             MemorySegment src = allocator.allocateUtf8String(file);
             MemorySegment cargs = args.length == 0 ? null : allocator.allocateArray(C_POINTER, args.length);
             for (int i = 0 ; i < args.length ; i++) {
@@ -82,13 +81,13 @@ public class Index extends ClangDisposable {
             ErrorCode code = ErrorCode.valueOf(Index_h.clang_parseTranslationUnit2(
                     ptr,
                     src,
-                    cargs == null ? MemoryAddress.NULL : cargs,
-                    args.length, MemoryAddress.NULL,
+                    cargs == null ? MemorySegment.NULL : cargs,
+                    args.length, MemorySegment.NULL,
                     0,
                     options,
                     outAddress));
 
-            MemoryAddress tu = outAddress.get(C_POINTER, 0);
+            MemorySegment tu = outAddress.get(C_POINTER, 0);
             TranslationUnit rv = new TranslationUnit(tu);
             // even if we failed to parse, we might still have diagnostics
             rv.processDiagnostics(dh);
