@@ -21,9 +21,9 @@
  * questions.
  */
 
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.NativeArena;
 import org.testng.annotations.Test;
 
 import java.util.concurrent.atomic.AtomicInteger;
@@ -48,10 +48,10 @@ import test.jextract.funcpointers.*;
 public class TestFuncPointerInvokers {
     @Test
     public void testStructFieldTypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
             MemorySegment bar = Bar.allocate(session);
-            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session).address());
+            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session));
             Bar.foo(bar, session).apply(42);
             assertEquals(val.get(), 42);
         }
@@ -59,10 +59,10 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testStructFieldFITypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
             MemorySegment bar = Bar.allocate(session);
-            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session).address());
+            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session));
             Foo.ofAddress(Bar.foo$get(bar), session).apply(42);
             assertEquals(val.get(), 42);
         }
@@ -70,9 +70,9 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalTypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            f$set(Foo.allocate((i) -> val.set(i), session).address());
+            f$set(Foo.allocate((i) -> val.set(i), session));
             f().apply(42);
             assertEquals(val.get(), 42);
         }
@@ -80,9 +80,9 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFITypedef() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            f$set(Foo.allocate((i) -> val.set(i), session).address());
+            f$set(Foo.allocate((i) -> val.set(i), session));
             Foo.ofAddress(f$get(), session).apply(42);
             assertEquals(val.get(), 42);
         }
@@ -90,10 +90,10 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testStructFieldFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
             MemorySegment baz = Baz.allocate(session);
-            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session).address());
+            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session));
             Baz.fp(baz, session).apply(42);
             assertEquals(val.get(), 42);
         }
@@ -101,10 +101,10 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testStructFieldFIFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
             MemorySegment baz = Baz.allocate(session);
-            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session).address());
+            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session));
             Baz.fp.ofAddress(Baz.fp$get(baz), session).apply(42);
             assertEquals(val.get(), 42);
         }
@@ -112,9 +112,9 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            fp$set(fp.allocate((i) -> val.set(i), session).address());
+            fp$set(fp.allocate((i) -> val.set(i), session));
             fp().apply(42);
             assertEquals(val.get(), 42);
         }
@@ -122,9 +122,9 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFIFunctionPointer() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            fp$set(fp.allocate((i) -> val.set(i), session).address());
+            fp$set(fp.allocate((i) -> val.set(i), session));
             fp.ofAddress(fp$get(), session).apply(42);
             assertEquals(val.get(), 42);
         }
@@ -132,9 +132,9 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFIFunctionPointerAddress() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            fp_addr$set(fp_addr.allocate((addr) -> MemoryAddress.ofLong(addr.toRawLongValue() + 1), session).address());
-            assertEquals(fp_addr.ofAddress(fp_addr$get(), session).apply(MemoryAddress.ofLong(42)), MemoryAddress.ofLong(43));
+        try (NativeArena session = NativeArena.openConfined()) {
+            fp_addr$set(fp_addr.allocate((addr) -> MemorySegment.ofLong(addr.toRawLongValue() + 1), session));
+            assertEquals(fp_addr.ofAddress(fp_addr$get(), session).apply(MemorySegment.ofLong(42)).toRawLongValue(), MemorySegment.ofLong(43).toRawLongValue());
         }
     }
 }
