@@ -26,7 +26,7 @@ import java.lang.foreign.GroupLayout;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemoryLayout.PathElement;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.NativeArena;
 import org.testng.annotations.Test;
 
 import test.jextract.unsupported.unsupported_h;
@@ -53,7 +53,7 @@ import test.jextract.unsupported.*;
 public class LibUnsupportedTest {
     @Test
     public void testAllocateFoo() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (NativeArena session = NativeArena.openConfined()) {
             var seg = Foo.allocate(session);
             Foo.i$set(seg, 32);
             Foo.c$set(seg, (byte)'z');
@@ -64,8 +64,8 @@ public class LibUnsupportedTest {
 
     @Test
     public void testGetFoo() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            var seg = MemorySegment.ofAddress(getFoo(), Foo.sizeof(), session);
+        try (NativeArena session = NativeArena.openConfined()) {
+            var seg = MemorySegment.ofNativeAddress(getFoo().toRawLongValue(), Foo.sizeof(), null, session);
             Foo.i$set(seg, 42);
             Foo.c$set(seg, (byte)'j');
             assertEquals(Foo.i$get(seg), 42);
